WIP - option to modify rate limit

--- a/src/components/settingsModal.html
+++ b/src/components/settingsModal.html
@@ -266,6 +266,7 @@
                                         ">
                                     </td>
                                 </tr>
+                                <tr data-bind="template: { name: 'MultipleChoiceSettingTemplate', data: Settings.getSetting('rateLimitModifier')}"></tr>
                             </tbody>
                         </table>
                         <div class="btn-group btn-block">
